# UnityPy-rewrite

./: README.md  pyproject.toml
UnityPy/enums/: __init__.py  cs_reference.py
UnityPy/files/: BundleFile.py  File.py  ObjectInfo.py  SerializedFile.py  WebFile.py  __init__.py
UnityPy/object_handlers/: Mesh.py  PacketBitVector.py  Texture2D.py
UnityPy/objects/: Object.py  PPtr.py  __init__.py  generated.py  generated_old.py  math.py
UnityPy/resources/: uncompressed.tpk
UnityPy/streams/: CompressedStreamReader.py  EndianBinaryReader.py  EndianBinaryWriter.py  __init__.py  structs.py
UnityPy/typetree/: Tpk.py  TypeTreeHelper.py  TypeTreeNode.py
generators/: ClassesGenerator.py  EnumGenerator.py
tests/resources/: README.md  prefab
